--- a/common/models/project.json
+++ b/common/models/project.json
@@ -19,7 +19,7 @@
     "id": {
       "type": "number",
       "id": true,
-      "required": true,
+      "required": false,
       "index": true
     }
   },
