--- a/.jshintrc
+++ b/.jshintrc
@@ -1,21 +1,29 @@
 {
-  "node": true,
-  "esnext": true,
-  "bitwise": true,
-  "camelcase": true,
-  "eqeqeq": true,
-  "eqnull": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": "nofunc",
-  "newcap": true,
-  "nonew": true,
-  "noarg": true,
-  "quotmark": "single",
-  "regexp": true,
-  "undef": true,
-  "unused": false,
-  "trailing": true,
-  "sub": true,
-  "maxlen": 80
+    "node": true,
+    "esnext": true,
+    "bitwise": true,
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "immed": true,
+    "indent": 4,
+    "latedef": true,
+    "newcap": true,
+    "noarg": true,
+    "quotmark": "single",
+    "regexp": true,
+    "undef": true,
+    "unused": true,
+    "strict": true,
+    "trailing": true,
+    "smarttabs": true,
+    "white": true,
+    "validthis": true,
+    "globals": {
+        "angular": false,
+        "document": false,
+        "window": false,
+        "CryptoJS": false,
+        "localStorage": false
+    }
 }
