--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server/app.js",
   "scripts": {
     "pretest": "jshint .",
-    "start": "node server/app.js"
+    "start": "nodemon server/app.js"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
@@ -17,7 +17,6 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
-    "jshint": "^2.5.6",
     "bower": "1.3.12",
     "browser-sync": "2.7.5",
     "browserify": "7.0.3",
@@ -40,12 +39,14 @@
     "gulp-uglify": "1.0.2",
     "gulp-util": "3.0.1",
     "jasmine-core": "2.1.3",
+    "jshint": "^2.5.6",
     "jshint-stylish": "1.0.0",
     "karma": "0.12.31",
     "karma-chrome-launcher": "0.1.7",
     "karma-htmlfile-reporter": "0.1.2",
     "karma-jasmine": "0.3.4",
     "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "0.1.4",
     "karma-safari-launcher": "^0.1.1",
     "streamqueue": "0.1.1",
