--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-ng-annotate": "0.5.2",
     "gulp-notify": "2.2.0",
     "gulp-prompt": "^0.1.2",
+    "gulp-protractor": "^1.0.0",
     "gulp-sass": "1.3.3",
     "gulp-sourcemaps": "1.2.8",
     "gulp-uglify": "1.0.2",
