--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "moment": "~2.10.6",
     "normalize-css": "normalize.css#~3.0.3",
     "v-button": "~1.1.0",
-    "v-modal": "~1.3.4"
+    "v-modal": "~1.3.4",
+    "angular-dragdrop": "~1.0.12"
   },
   "overrides": {
     "cryptojslib": {
